--- a/pokemonGO/src/app/tab2/tab2.page.scss
+++ b/pokemonGO/src/app/tab2/tab2.page.scss
@@ -1,5 +1,16 @@
-ion-card {
-    margin-top: 10vh; /* Ajuste a margem superior conforme necessário */
-   
- 
-  }
+.fab-container {
+  display: flex;
+  justify-content: center;
+  position: fixed;
+  bottom: 12%;
+  left: 25%;
+  width: 50%;
+  z-index: 10;
+}
+.camera {
+  margin-right: 10%;
+}
+.batalha {
+  margin-left: 10%;
+}
+
