--- a/pokemonGO/src/app/tab3/tab3.page.html
+++ b/pokemonGO/src/app/tab3/tab3.page.html
@@ -3,45 +3,78 @@
     <ion-title>Pokédex</ion-title>
   </ion-toolbar>
 </ion-header>
+<ion-header collapse="condense">
+  <ion-toolbar>
+    <ion-title size="large">Pokédex</ion-title>
+  </ion-toolbar>
+</ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Pokédex</ion-title>
-    </ion-toolbar>
-  </ion-header>
- <div *ngIf="showMessage" class="selected-message">
+  <ion-searchbar [(ngModel)]="searchTerm" (ionInput)="filterPokemons($event)" placeholder="Search Pokémon" ></ion-searchbar>
+
+
+  <div *ngIf="showMessage" class="selected-message">
     {{ selectedPokemonMessage | uppercase }}
   </div>
+
   <ion-grid>
     <ion-row class="ion-wrap">
-      <ion-col size="6" size-md="6" *ngFor="let pokemon of capturedPokemons">
-        <ion-card>
-          <ion-card-header>
-            <ion-card-title>{{ pokemon.name }}</ion-card-title>
-           
-          </ion-card-header>
-          <ion-card-content>
-            <ion-img [src]="pokemon.sprites.front_default"></ion-img>
-            <ion-item>
-              <ion-label color="success">Vitórias:</ion-label>
-              <ion-badge color="success">{{ pokemon.victories }}</ion-badge>
-            </ion-item>
-            <ion-item>
-              <ion-label color="danger">Derrotas:</ion-label>
-              <ion-badge color="danger">{{ pokemon.defeats }}</ion-badge>
-            </ion-item>
-            <ion-item>
-              <ion-label color="warning">Empates:</ion-label>
-              <ion-badge color="warning">{{ pokemon.draws }}</ion-badge>
-            </ion-item>
-            <ion-button expand="full" color="primary" (click)="selectPokemon(pokemon)">
-              Selecionar para Batalha
-            </ion-button>
-          </ion-card-content>
-        </ion-card>
-      </ion-col>
+      <!-- Mostrar todos os Pokémon quando não há pesquisa -->
+      <ng-container *ngIf="!searchTerm || searchTerm.trim() === ''">
+        <ion-col size="6" size-md="6" *ngFor="let pokemon of capturedPokemons">
+          <ion-card>
+            <ion-card-header>
+              <ion-card-title>{{ pokemon.name }}</ion-card-title>
+            </ion-card-header>
+            <ion-card-content>
+              <ion-img [src]="pokemon.sprites.front_default"></ion-img>
+              <ion-item>
+                <ion-label color="success">Vitórias:</ion-label>
+                <ion-badge color="success">{{ pokemon.victories }}</ion-badge>
+              </ion-item>
+              <ion-item>
+                <ion-label color="danger">Derrotas:</ion-label>
+                <ion-badge color="danger">{{ pokemon.defeats }}</ion-badge>
+              </ion-item>
+              <ion-item>
+                <ion-label color="warning">Empates:</ion-label>
+                <ion-badge color="warning">{{ pokemon.draws }}</ion-badge>
+              </ion-item>
+              <ion-button expand="full" color="primary" (click)="selectPokemon(pokemon)">
+                Selecionar para Batalha
+              </ion-button>
+            </ion-card-content>
+          </ion-card>
+        </ion-col>
+      </ng-container>
+      <!-- Mostrar Pokémon filtrados quando há pesquisa -->
+      <ng-container *ngIf="searchTerm && searchTerm.trim() !== ''">
+        <ion-col size="6" size-md="6" *ngFor="let pokemon of filteredPokemons">
+          <ion-card>
+            <ion-card-header>
+              <ion-card-title>{{ pokemon.name }}</ion-card-title>
+            </ion-card-header>
+            <ion-card-content>
+              <ion-img [src]="pokemon.sprites.front_default"></ion-img>
+              <ion-item>
+                <ion-label color="success">Vitórias:</ion-label>
+                <ion-badge color="success">{{ pokemon.victories }}</ion-badge>
+              </ion-item>
+              <ion-item>
+                <ion-label color="danger">Derrotas:</ion-label>
+                <ion-badge color="danger">{{ pokemon.defeats }}</ion-badge>
+              </ion-item>
+              <ion-item>
+                <ion-label color="warning">Empates:</ion-label>
+                <ion-badge color="warning">{{ pokemon.draws }}</ion-badge>
+              </ion-item>
+              <ion-button expand="full" color="primary" (click)="selectPokemon(pokemon)">
+                Selecionar para Batalha
+              </ion-button>
+            </ion-card-content>
+          </ion-card>
+        </ion-col>
+      </ng-container>
     </ion-row>
   </ion-grid>
-  
 </ion-content>
