--- a/pokemonGO/src/app/tab2/tab2.page.html
+++ b/pokemonGO/src/app/tab2/tab2.page.html
@@ -21,8 +21,8 @@
               <ion-item>
                 <ion-label>Weight: {{ pokemonTab1.weight }}</ion-label>
               </ion-item>
-              <ion-item *ngFor="let ability of pokemonTab1.abilities">
-                <ion-label>Ability: {{ ability.ability.name }}</ion-label>
+              <ion-item>
+                <ion-label>Abilities: {{ pokemonTab1.abilities.length }}</ion-label>
               </ion-item>
             </ion-list>
           </ion-card-content>
@@ -43,8 +43,8 @@
               <ion-item>
                 <ion-label>Weight: {{ pokemon.weight }}</ion-label>
               </ion-item>
-              <ion-item *ngFor="let ability of pokemon.abilities">
-                <ion-label>Ability: {{ ability.ability.name }}</ion-label>
+               <ion-item>
+                <ion-label>Abilities: {{ pokemon.abilities.length }}</ion-label>
               </ion-item>
             </ion-list>
           </ion-card-content>
